# goblin-sigscan

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  rust-toolchain.toml
.github/workflows/: build.yml  ci.yml
crates/goblin-lite/: Cargo.toml
crates/goblin-lite-macros/: Cargo.toml
crates/goblin-lite-macros/src/: lib.rs
crates/goblin-lite-pattern/: Cargo.toml
crates/goblin-lite-pattern/src/: lib.rs
crates/goblin-lite/benches/: pelite_compare.rs  scan_perf.rs
crates/goblin-lite/src/: address.rs  elf.rs  lib.rs  mach.rs  pattern.rs  pe64.rs  scan.rs  typed.rs
crates/goblin-lite/tests/: addressing_fixtures.rs  macro_smoke.rs
crates/goblin-pattern/: Cargo.toml
crates/goblin-pattern/src/: elf.rs  mach.rs  pattern.rs  scan.rs
crates/goblin-pattern/tests/: macro_smoke.rs
crates/goblin-sigscan/: Cargo.toml
crates/goblin-sigscan-cli/: Cargo.toml
crates/goblin-sigscan-cli/src/: main.rs
crates/goblin-sigscan-macros/: Cargo.toml
crates/goblin-sigscan-macros/src/: lib.rs
crates/goblin-sigscan-pattern/: Cargo.toml
crates/goblin-sigscan-pattern/src/: lib.rs
crates/goblin-sigscan/benches/: pelite_compare.rs  scan_perf.rs
crates/goblin-sigscan/src/: address.rs  elf.rs  lib.rs  mach.rs  pattern.rs  pe64.rs  scan.rs
crates/goblin-sigscan/tests/: addressing_fixtures.rs  macro_smoke.rs
crates/sigscan/: Cargo.toml
crates/sigscan/src/: main.rs
scripts/: README.md  bench-ab.sh  bench-key.sh  bench-pelite-summary.sh  bench-summary.sh  flamegraph-scan.sh  perf-smoke.sh
