[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
description = "Goblin-powered PE pattern scanning with pelite-style signatures"

[workspace.dependencies]
goblin = "0.10"
thiserror = "2"
proc-macro-crate = "3"
