[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
authors = ["ko1N <ko1N@users.noreply.github.com>", "killerra <killerra@users.noreply.github.com>"]
license = "MIT"
description = "Goblin-powered PE pattern scanning with pelite-style signatures"
repository = "https://github.com/memflow/goblin-sigscan"
readme = "README.md"

[workspace.dependencies]
goblin = "0.10"
thiserror = "2"
proc-macro-crate = "3"
bytemuck = { version = "1", features = ["derive"] }
memchr = "2"
