[package]
name = "goblin-lite-macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Proc-macros for goblin-lite"
repository.workspace = true
readme.workspace = true
documentation = "https://docs.rs/goblin-lite-macros/"
keywords = ["macro", "pattern", "signature", "binary", "pe"]
categories = ["development-tools::procedural-macro-helpers", "parsing"]

[lib]
proc-macro = true

[dependencies]
goblin-lite-pattern = { path = "../goblin-lite-pattern" }
proc-macro-crate = { workspace = true }
