[package]
name = "goblin-lite"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
goblin = { workspace = true }
thiserror = { workspace = true }
bytemuck = { workspace = true }
memchr = { workspace = true }
goblin-lite-macros = { path = "../goblin-lite-macros" }
goblin-lite-pattern = { path = "../goblin-lite-pattern" }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "scan_perf"
harness = false
