[package]
name = "goblin-sigscan-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Small CLI to scan binaries with pelite-style signatures"
repository.workspace = true
readme.workspace = true
documentation = "https://docs.rs/goblin-sigscan-cli/"
keywords = ["binary", "cli", "scanner", "signature", "pe"]
categories = ["command-line-utilities", "development-tools::debugging"]

[[bin]]
name = "sigscan"
path = "src/main.rs"

[dependencies]
goblin = { workspace = true }
goblin-sigscan = { path = "../goblin-sigscan" }
thiserror = { workspace = true }
