[package]
name = "goblin-sigscan-pattern"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Shared pattern parser for goblin-sigscan"
repository.workspace = true
readme.workspace = true
documentation = "https://docs.rs/goblin-sigscan-pattern/"
keywords = ["binary", "pattern", "signature", "scanner", "pe"]
categories = ["parser-implementations", "parsing"]

[dev-dependencies]
proptest = "1"
